Changed config settings

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Notre-Dame de Paris"
-baseURL = "https://gohugo-theme-ananke.pages.dev"
+baseURL = "https://hugotion.github.io/j5718ngvrjpkrn2m1x4jrg9tw97g9vfr"
 languageCode = "en-us"
 theme = "gohugo-theme-ananke"
 resourceDir = "../resources"
